(env
  (dev     (flags (-w +1..3+5..28+30..39+43+46..47+49..57+61..62-40-26 -strict-sequence -strict-formats -short-paths -keep-locs -g)))
  (release (flags (-w +1..3+5..28+30..39+43+46..47+49..57+61..62-40-26 -strict-sequence -strict-formats -short-paths -keep-locs   )))
)

(executables
 (names main layers)
 (public_names bench-pack bench-pack-layers)
 (modules main layers import)
 (package irmin-bench)
 (preprocess
  (pps ppx_repr))
 (libraries irmin-pack irmin-pack.layered irmin-test.bench irmin-layers lwt
   unix cmdliner logs memtrace repr ppx_repr bench_common rusage))

(library
 (name bench_common)
 (modules bench_common)
 (libraries irmin-pack unix progress progress.unix uuidm))

(library
 (name irmin_traces)
 (modules
   trace_common
   trace_definitions
   trace_collection
   trace_stat_summary
   trace_stat_summary_conf
   trace_stat_summary_utils
   trace_stat_summary_pp
   trace_replay
   trace_replay_intf
   trace_stat_summary_cb
   tezos_history_metrics
   trace_raw_actions_summary
   trace_raw_actions_to_replayable
   )
 (preprocess
  (pps ppx_repr ppx_deriving.enum ppx_deriving_yojson))
 (libraries irmin irmin-pack unix lwt repr ppx_repr bentov mtime printbox
   uucp uutf printbox.unicode mtime.clock.os bench_common cohttp-lwt-unix
   lwt_ssl ppx_deriving_yojson tezos-context))

(executable
 (name tree)
 (modules tree)
 (preprocess
  (pps ppx_repr))
 (libraries irmin-pack irmin-pack.layered irmin-pack.mem irmin-test.bench
   irmin-layers lwt unix cmdliner logs memtrace repr ppx_repr bench_common
   tezos-context-hash-irmin irmin_traces))

(executable
 (name manage_stats)
 (modules manage_stats)
 (libraries cmdliner irmin_traces))

;; (executable
;;  (name tezos_history_metrics)
;;  (modules tezos_history_metrics)
;;  (preprocess
;;   (pps ppx_repr ppx_deriving_yojson))
;;  (libraries irmin irmin-pack unix lwt repr ppx_repr bentov mtime printbox
;;    uucp uutf printbox.unicode mtime.clock.os bench_common cohttp-lwt-unix
;;    lwt_ssl ppx_deriving_yojson))

(executable
 (name manage_actions)
 (modules manage_actions)
 (libraries cmdliner irmin_traces))

;; Require the executables to compile during tests

(rule
 (alias runtest)
 (package irmin-bench)
 (deps main.exe layers.exe tree.exe stats.exe)
 (action (progn)))
