;; (env
;;   (dev     (flags (-w +1..3+5..28+30..39+43+46..47+49..57+61..62-40-26 -strict-sequence -strict-formats -short-paths -keep-locs -g)))
;;   (release (flags (-w +1..3+5..28+30..39+43+46..47+49..57+61..62-40-26 -strict-sequence -strict-formats -short-paths -keep-locs   )))
;; )


(library
 (public_name irmin-pack)
 (name irmin_pack)
 (libraries fmt index index.unix irmin irmin-layers logs lwt lwt.unix mtime
   ppx_irmin cmdliner optint)
 (preprocess
  (pps ppx_irmin)))
